[BUG 10]: Hope it's fixed